--- a/src/app/avaliation/anamenese/anamenese.component.scss
+++ b/src/app/avaliation/anamenese/anamenese.component.scss
@@ -2,7 +2,7 @@
   background-image: url("./../../../assets/img/tyler-nix-Y1drF0Y3Oe0-unsplash.jpg");
   background-repeat: no-repeat;
   background-blend-mode: normal;
-  background-size: cover;
+  background-size: contain;
   background-position: center;
 }
 
