--- a/src/app/commun/menu/menu.component.html
+++ b/src/app/commun/menu/menu.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="menu-toolbar" color="primary">
+<mat-toolbar class="menu-toolbar">
     <span class="alphapro"><a routerLink="/dash">AlphaProSystem</a></span>
     <span class="menu-spacer"></span>
     <span class="menu-username" *ngIf="selectedStudent.id"><a routerLink="/new">{{selectedStudent.nome}}</a></span>
