--- a/src/app/dashboard/dash/dash.component.scss
+++ b/src/app/dashboard/dash/dash.component.scss
@@ -1,73 +1,92 @@
-.container{
- // background-image: url("./../../../assets/img/scott-webb-KblIFRq1jkg-unsplash.jpg");
+.container {
   background-image: url("./../../../assets/img/alphapro2.jpg");
-    background-size: cover;
-    background-position: center;
-    height: 95vh;
-  }
+  background-size: cover;
+  background-position: center;
+  position: relative;
+}
 
-  .title{
-    font-family: 'Fredoka One', cursive;
-    font-size: 20px;
-    font-weight: 500;
-  }
+.title {
+  font-family: "Fredoka One", cursive;
+  font-size: 20px;
+  font-weight: 500;
+}
 
-  .inactive{
-    color: orangered;
-  }
+.inactive {
+  color: orangered;
+}
 
-  .dash-form{
-    width: 84%;
-    height: 180px;
-    position: absolute;
-    bottom: 50px;
-    left: 50%;
-    transform: translate( -50%, 0);
-    background-color: rgba($color: whitesmoke, $alpha: .50);
-    color: black;
-    font-size: small;
-    border-radius: 10px;
-    padding: 20px;
+.dash-form {
+  width: 100%;
+  height: 410px;
+  position: absolute;
+  bottom: 70px;
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-evenly;
+
+  .aluno-select {
+    font-size: large;
+    color: white;
+    width: 100%;
+    background-color: rgba(119, 107, 107, 0.788);
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
+  }
 
-    .mat-form-field{
-      font-size: small;
-      width: 280px;
-    }
+  .mat-form-field {
+    width: 70%;
+    font-size: large !important;
   }
-  @media only screen and (min-width: 768px) {
-    .dash-form{
-      width: 50%;
-      /* top: 50%; */
-    }
-  }
-  @media only screen and (min-width: 1024px) {
-    .dash-form{
-      width: 30%;
-     /*  top: 50%; */
-    }
-  }
-  .dash-buttons-action{
-    width: 100%;
+
+  .mat-select-value-text {
+    color: whitesmoke !important;
+    font-size: large;
     display: flex;
-    justify-content: space-evenly;
-
-    .dash-buttons-action_block{
-      width: 56px;
-      text-align: center;
-
-      label{
-        font-size: x-small;
-        text-transform: uppercase;
-      }
-    }
+    justify-content: center;
+    align-items: center;
   }
 
-  .dash-button-new{
-    width: 100%;
-    a{
-      margin-left: 75%;
-    }
+  .select-button {
+    width: 22px;
+    height: 22px;
   }
+}
+
+.dash-buttons-action_block {
+  width: 100%;
+  height: 81.3px;
+  font-size: large;
+  color: whitesmoke;
+  background-color: rgba(119, 107, 107, 0.788);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-transform: uppercase;
+}
+
+.mat-button {
+  display: flex !important;
+  align-items: center;
+  justify-content: space-around;
+
+  .ico{
+    width: 32px;
+    margin-right: 40px;
+  }
+  .lb{
+    width: 120px;
+  }
+
+}
+
+@media only screen and (min-width: 768px) {
+  .dash-form {
+    width: 50%;
+  }
+}
+@media only screen and (min-width: 1024px) {
+  .dash-form {
+    width: 30%;
+  }
+}
