--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,10 +4,10 @@ $min-width: 1024px;
 
 html,
 body {
-  height: 100%;
+  height: 100vh;
+  margin: 0;
 }
 body {
-  margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
@@ -29,7 +29,7 @@ em{
 
 .container {
   width: 100vw;
-  height: 92vh;
+  height: 94vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -50,8 +50,8 @@ em{
 
 
 .section {
-  width: 98%;
-  padding: 10px;
+  width: 100%;
+  /* padding: 10px; */
   display: flex;
   flex: 1;
   justify-content: center;
@@ -176,8 +176,8 @@ td > input {
 @media only screen and (min-width: $min-width) {
   /* For desktop: */
   .container{
-    width: 60vw;
-    margin: auto;
+    width: 100vw;
+    margin: 0;
     -webkit-box-shadow: 10px 0px 13px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 10px 0px 13px 0px rgba(0,0,0,0.75);
     box-shadow: 10px 0px 13px 0px rgba(0,0,0,0.75);
@@ -191,7 +191,7 @@ box-shadow: 10px 0px 13px 0px rgba(0,0,0,0.75);
 
 
   .section{
-    width: 96%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
