--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import url('https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 $min-width: 1024px;
 
 html,
@@ -29,7 +29,7 @@ em{
 
 .container {
   width: 100vw;
-  height: 94vh;
+  height: 89vh;
   display: flex;
   flex-direction: column;
   align-items: center;
