--- a/src/app/register/new/new.component.scss
+++ b/src/app/register/new/new.component.scss
@@ -1,30 +1,84 @@
 .container {
-    background-image: url("./../../../assets/img/trust-tru-katsande-Pu7BOaYlYGY-unsplash.jpg");
+    background-image: url("./../../../assets/img/Cadastro.jpg");
     background-repeat: no-repeat;
-    background-blend-mode: normal;
     background-size: cover;
     background-position: center;
+    color: whitesmoke;
+
+}
+
+.section{
+    background-color: rgba(139, 138, 138, 0.856);
+    display: flex;
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+
+    h1{
+        color: white;
+        text-shadow: 4px 4px 2px rgba(0,0,0,0.6);
+    }
+}
+
+::ng-deep {
+    .mat-form-field .mat-form-field-flex{
+      color: whitesmoke;
+    }
+  
+    .mat-select-value {
+        color: whitesmoke !important;
+    }
+    .mat-select-value-text {
+        color: whitesmoke !important;
+    }
+    .mat-form-field-appearance-legacy .mat-form-field-underline {
+        background-color: white;
+    }
 }
 .new-form {
-    border-radius: 15px;
     margin: auto;
-    padding: 20px;
     display: flex;
     justify-self: center;
     flex-wrap: wrap;
     justify-content: space-around;
-    background-color: rgba($color: #dbd3d39f, $alpha: 0.67);
     width: 80%;
 
     .mat-form-field {
-        width: 250px;
+        width: 100%;
     }
     .new-form-buttons {
         width: 250px;
         display: flex;
         justify-content: space-evenly;
     }
+
 }
+
+.section-middle{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    &-left{
+        width: 60%;
+    }
+    &-right{
+        width: 35%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .image-box{
+            width: 135px;
+            height: 190px;
+            border: whitesmoke 1px solid;
+            background-color: rgba(167, 163, 163, 0.856);
+
+
+        }
+    }
+}
+
 .section-action{
     width: 100%;
     display: flex;
