login authguard top header

--- a/src/app/avaliation/av-dash/av-dash.component.html
+++ b/src/app/avaliation/av-dash/av-dash.component.html
@@ -279,9 +279,9 @@
         </mat-accordion>
 
     </div>
-    <div class="footer">
+<!--     <div class="footer">
         <a mat-mini-fab color="primary" (click)="morfoExpanded=true; changeMorfoExpanded(); videoExpanded=true; changeVideoExpanded();" routerLink="/dash">
             <mat-icon>home</mat-icon>
         </a>
-    </div>
+    </div> -->
 </div>
