--- a/src/app/avaliation/evaluation/evaluation.component.html
+++ b/src/app/avaliation/evaluation/evaluation.component.html
@@ -115,9 +115,9 @@
 
     </div>
 
-    <div class="footer">
+<!--     <div class="footer">
         <button mat-mini-fab color="primary" routerLink="/avDash">
             <mat-icon>undo</mat-icon>
         </button>
-    </div>
+    </div> -->
 </div>
