--- a/src/app/commun/top-header/top-header.component.html
+++ b/src/app/commun/top-header/top-header.component.html
@@ -1,9 +1,12 @@
 <div class="top-header">
     <div class="top-header-main">
-        <img class="logo" src="./../../../assets/img/logo_m.gif" alt="logotipo">
-        <img class="text" src="./../../../assets/img/alphaprosystem_m.gif" alt="texto">
+        <img class="logo" src="./../../../assets/img/logo_top.png" alt="logotipo">
     </div>
 
+    <button mat-button routerLink="/configs">
+        <mat-icon>settings</mat-icon>
+    </button>
+    
     <div class="top-header-orange">&nbsp;</div>
 
 </div>
