--- a/src/app/commun/menu/menu.component.scss
+++ b/src/app/commun/menu/menu.component.scss
@@ -1,61 +1,49 @@
 $min-width: 1024px;
 
-
-.menu-toolbar{
+.mat-toolbar {
   width: 100vw;
   height: 6vh;
-  background-color: rgb(115,240,242);
+  background-color: rgb(83, 192, 194);
+  display: inline-flex;
+  justify-content: space-evenly;
+  align-items: center;
+
+  .menu-element{
+    color: #126C6E;
+    display: inline;
+    a{
+      color: #126C6E;
+      display: block;
+      font-size: 14px;
+    }
+
+  }
 }
 
 @media only screen and (min-width: $min-width) {
-/*   .menu-toolbar{
-    width: 100vw;
-    margin: auto;
-  } */
-  .alphapro{
-    font-family: 'Fredoka One', cursive;
-    font-size: 22px;
-    font-weight: 500;
-  }
+  
+}
+a {
+  color: whitesmoke;
+  text-decoration: none;
 
   .menu-icon {
-    padding: 0 16px;
+    margin-top: 10px;
   }
 }
+a:hover {
+  color: whitesmoke;
+  text-decoration: none;
 
-.menu-icon {
-    padding: 0 7px;
+  .menu-icon {
+    margin-top: 10px;
   }
-  
-  .menu-spacer {
-    flex: 1 1 auto;
-  }
-  .menu-username{
-    font-size: 12px;
-    font-weight: 400;
-  }
+}
+a:visited {
+  color: whitesmoke;
+  text-decoration: none;
 
-  a { 
-    color: whitesmoke;
-    text-decoration: none;
-    
-    .menu-icon{
-      margin-top: 10px;
-    }
+  .menu-icon {
+    margin-top: 10px;
   }
-  a:hover { 
-    color:whitesmoke; 
-    text-decoration: none;
-    
-    .menu-icon{
-      margin-top: 10px;
-    }
-  }
-  a:visited { 
-    color: whitesmoke;
-    text-decoration: none;
-    
-    .menu-icon{
-      margin-top: 10px;
-    }
-  }
+}
