--- a/src/app/login/login/login.component.scss
+++ b/src/app/login/login/login.component.scss
@@ -1,45 +1,66 @@
-.container-fluid{
+.container{
     position: relative;
+    background-color: rgb(0, 238, 255);
     background-image: url("./../../../assets/img/samuel-girven-VJ2s0c20qCo-unsplash.jpg");
     background-repeat: no-repeat;
-    background-blend-mode: normal;
+    background-blend-mode: darken;
     background-size: cover;
     background-position: center;
-    height: 100vh;
-  }
-
-  .login-form{
-    width: 250px;
-    height: 190px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgba($color: whitesmoke, $alpha: .60);
-    color: black;
-    border-radius: 10%;
+    height: 95vh;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-  }
-  
-  .center-form {
-    margin-top: -4px;
+
+    &-form{
+      width: 100%;
+      height: 150px;
       display: flex;
       flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      min-width: 100px;
-      max-width: 200px;
-      width: 100%;
-      padding-top: 5%;
+      justify-content: space-between;
+      color: whitesmoke;
+
+      &__group{
+        width: 100%;
+        height: 40px;
+        background-color:  rgba(119, 107, 107, 0.788);
+        display: inline-flex;
+        justify-content: space-around;
+        align-items: center;
+
+        .mat-form-field{
+          width: 70%;
+        }
+      }
+
+      &__button{
+        width: 100%;
+        height: 60px;
+        background-color:  rgba(119, 107, 107, 0.788);
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .mat-stroked-button{
+          width: 100px;
+          height: 40px;
+          color: whitesmoke;
+          font-size: large;
+        }
+        .mat-stroked-button:not([disabled]) {
+          border-color: rgba(255,255,255,.612);
+        }
+      }
     }
-    
-    .center-full-width {
-      margin-top: -17px;
-      width: 80%;
+
+  }
+
+  ::ng-deep {
+    .mat-form-field .mat-form-field-flex{
+      color: whitesmoke;
     }
-    
-    .mat-display-1{
-      margin: 0 0 10px;
+    .mat-form-field-appearance-legacy .mat-form-field-underline {
+        background-color: white;
     }
+}
+
