--- a/src/app/commun/menu/menu.component.html
+++ b/src/app/commun/menu/menu.component.html
@@ -5,7 +5,7 @@
         </a>
     </div>
     <div class="menu-element">
-        <a routerLink="/dash">
+        <a style="cursor: pointer;" (click)="goBack()">
             <img src="../../../assets/svg/icons/previus.svg" height="16">VOLTAR
         </a>
     </div>    
