--- a/src/app/avaliation/anamenese/anamenese.component.scss
+++ b/src/app/avaliation/anamenese/anamenese.component.scss
@@ -1,40 +1,104 @@
 .container {
-  background-image: url("./../../../assets/img/tyler-nix-Y1drF0Y3Oe0-unsplash.jpg");
+  background-image: url("./../../../assets/img/anamnese.jpg");
   background-repeat: no-repeat;
   background-blend-mode: normal;
-  background-size: contain;
+  background-size: cover;
   background-position: center;
-}
-
-
-
-.mat-accordion{
-  width: 360px;
-  margin: auto;
-}
-
-
-.mat-expansion-panel {
-  background-color: rgba(247, 238, 238, 0.704);
-}
-
-.headers-align .mat-expansion-panel-header-title,
-.headers-align .mat-expansion-panel-header-description {
-  flex-basis: 0;
-}
-
-.headers-align .mat-expansion-panel-header-description {
-  justify-content: space-between;
+  display: flex;
+  flex-direction: column;
   align-items: center;
+
+  app-header-name {
+    width: 100%;
+  }
+
+  .section {
+    width: 100%;
+    display: flex !important;
+    flex-direction: column !important;
+    justify-content: flex-start !important;
+    align-items: center !important;
+
+    h1 {
+      margin-top: 80px;
+      width: 100%;
+      height: 60px;
+      background-color: rgba(119, 107, 107, 0.788);
+      color: white;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 30px;
+      text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.6);
+    }
+  }
 }
 
-.headers-align .mat-form-field + .mat-form-field {
-  margin-left: 8px;
+.mat-accordion {
+  width: 100%;
 }
+::ng-deep {
+  .mat-expansion-panel {
+    background-color: rgba(119, 107, 107, 0.788);
+    margin-bottom: 3px !important;
+    border-radius: unset;
+  }
+  .mat-expansion-panel-header-title {
+    color: white;
+  }
+  .mat-expansion-panel-header-description,
+  .mat-expansion-indicator::after {
+    color: white;
+  }
 
-.mat-card {
-  width: 300px;
-  margin: auto;
+  .mat-select-value {
+    color: whitesmoke !important;
+  }
+  .mat-select-value-text {
+    color: whitesmoke !important;
+  }
+  .mat-form-field-appearance-legacy .mat-form-field-underline {
+    background-color: white;
+  }
+  .mat-card {
+    background-color: transparent;
+    color: white;
+  }
+  .mat-expansion-panel-content {
+    background-color: rgba(119, 107, 107, 0.1788);
+  }
+
+  .mat-card-subtitle {
+    text-align: left;
+    color: white;
+  }
+
+  .mat-checkbox-frame,
+  .mat-radio-outer-circle {
+    border-color: white;
+  }
+
+  .mat-form-field-appearance-legacy .mat-form-field-label {
+    color: white !important;
+  }
+  label{
+    color: whitesmoke;
+  }
+
+  .mat-stroked-button:not([disabled]) {
+    border-color: white;
+    color: white;
+  }
+  .mat-stroked-button:not([disabled]):hover {
+    border-color: white;
+    background-color: rgba(245, 245, 245, 0.555);
+  }
+  .mat-tab-label{
+    color: white;
+  }
+  .mat-select-arrow {
+    color: unset;
+  }
 }
 
 .check-box {
@@ -58,31 +122,29 @@
   width: 100%;
 }
 
-.escalas{
+.escalas {
   display: flex;
   flex-direction: column;
 }
 
 .mat-radio-button {
   display: inline;
-  margin: 5px;
+  // margin: 5px;
 }
 .mat-checkbox-layout {
   white-space: normal !important;
 }
 
 .mat-radio-label {
-    white-space: normal !important;
-    padding-bottom: 10px !important; 
-    padding-right: 5px !important;
-  }
-
-.wrap-label {
-    white-space: break-spaces;
-    font-size: small;
+  white-space: normal !important;
+  padding-bottom: 10px !important;
+  padding-right: 5px !important;
 }
 
-
+.wrap-label {
+  white-space: break-spaces;
+  font-size: small;
+}
 
 .patologico {
   .mat-radio-button {
@@ -107,9 +169,15 @@
 }
 
 @media only screen and (min-width: 768px) {
-
-  .mat-accordion{
+  .section {
     width: 520px !important;
+    h1 {
+      width: 100%;
+    }
+  }
+
+  .mat-accordion {
+    width: 1005 !important;
   }
   .mat-card {
     width: 440px !important;
@@ -117,11 +185,10 @@
   }
   ::ng-deep .mat-tab-header-pagination {
     display: none !important;
-}
+  }
 
   ::-webkit-scrollbar {
     width: 0px;
     background: transparent; /* make scrollbar transparent */
   }
 }
-
