--- a/src/app/avaliation/av-dash/av-dash.component.html
+++ b/src/app/avaliation/av-dash/av-dash.component.html
@@ -1,9 +1,8 @@
 <div class="container">
-    <div class="header">
-        <h1 i18n="Title">Avaliações</h1>
-    </div>
+    <app-header-name></app-header-name>
 
     <div class="section">
+        <h1 i18n="Title">Avaliação</h1>
         <mat-accordion>
             <mat-expansion-panel class="accordion">
                 <mat-expansion-panel-header routerLink="/eval">
