--- a/src/app/avaliation/evaluation/evaluation.component.scss
+++ b/src/app/avaliation/evaluation/evaluation.component.scss
@@ -1,20 +1,63 @@
 .container {
+  background-color: rgb(7, 128, 128);
   background-image: url("./../../../assets/img/measurement-1698856.jpg");
   background-repeat: no-repeat;
-  background-blend-mode: normal;
+  background-blend-mode: luminosity;
   background-size: cover;
   background-position: center;
+
+  app-header-name {
+    width: 100%;
+  }
 }
 
+.section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
+  h1 {
+    margin-top: 40px;
+    width: 100%;
+    height: 70px;
+    background-color: rgba(119, 107, 107, 0.788);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.6);
+  }
+}
 
 form {
   display: flex;
   flex-direction: column;
-  background-color: rgba(245, 245, 245, 0.7);
-  width: 500px;
-  min-height: 400px;
+  background-color: rgba(119, 107, 107, 0.788);
+  width: 425px;
   padding: 15px;
-  border-radius: 7px;
-  margin: auto;
+  color: white;
+}
+
+::ng-deep {
+  .mat-stroked-button {
+    width: 56px;
+    height: 56px;
+  }
+  .mat-stroked-button:not([disabled]) {
+    border-color: white;
+  }
+  .mat-stroked-button:not([disabled]):hover {
+    border-color: white;
+    background-color: rgba(245, 245, 245, 0.555);
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .section {
+    width: 425px !important;
+    h1 {
+      width: 100%;
+    }
+  }
 }
