--- a/src/app/avaliation/risco/qpaf/qpaf.component.html
+++ b/src/app/avaliation/risco/qpaf/qpaf.component.html
@@ -1,9 +1,8 @@
 <div class="container">
-    <div class="header">
-        <h1 i18n>Questionário PAR-Q</h1>
-    </div>
+    <app-header-name></app-header-name>
 
     <div class="section">
+        <h1 i18n>Questionário PAR-Q</h1>
         <form class="flex-form" #f="ngForm" (submit)="save(f.value)">
             <mat-card>
                 <mat-card-content>
@@ -106,11 +105,8 @@
             <em i18n>Fonte: Sociadade Canadense de Fisiologia do Exercicio, in ACSM (2003)</em>
 
             <div class="footer">
-                <button type="button" mat-mini-fab color="primary" (click)="goBack()">
-                    <mat-icon>undo</mat-icon>
-                </button>
-                <button mat-mini-fab color="primary">  
-                    <mat-icon>redo</mat-icon>
+                <button mat-stroked-button>
+                    Salvar  
                 </button>
             </div>
         </form>
