--- a/src/app/avaliation/risco/qpaf/qpaf.component.scss
+++ b/src/app/avaliation/risco/qpaf/qpaf.component.scss
@@ -1,17 +1,53 @@
+.container {
+    background-color: rgb(13, 137, 141);
+    background-image: url("./../../../../assets/img/CON 012.JPG");
+    background-repeat: no-repeat;
+    background-blend-mode: luminosity;
+    background-size: cover;
+    background-position: center;
 
-
-.header {
-    h1 {
-        font-size: 16px;
+    display: flex;
+    flex-direction: column;
+    
+    .section{
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        color: white;
     }
 }
 
-.flex-radio-group{
+app-header-name {
+    width: 100%;
+}
+
+h1 {
+    margin-top: 40px;
+    width: 100%;
+    height: 70px;
+    background-color: rgba(119, 107, 107, 0.788);
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.6);
+}
+
+.mat-card {
+    width: 100%;
+    background-color: rgba(119, 107, 107, 0.788) !important;
+    color: white;
+    margin-bottom: 4px;
+}
+
+.flex-radio-group {
     display: flex;
     flex-direction: row;
     justify-content: center;
 }
-.mat-radio-group{
+.mat-radio-group {
     width: 140px;
     display: flex;
     justify-content: space-between;
@@ -23,27 +59,32 @@
 em {
     font-size: x-small;
 }
-
-
+::ng-deep {
+    .mat-radio-outer-circle {
+        border-color: white;
+    }
+    .mat-stroked-button:not([disabled]) {
+        border-color: white;
+        color: white;
+    }
+    .mat-stroked-button:not([disabled]):hover {
+        border-color: white;
+        background-color: rgba(245, 245, 245, 0.555);
+    }
+}
 
 @media only screen and (min-width: 768px) {
     .container {
+        background-color: rgb(13, 137, 141);
         background-image: url("./../../../../assets/img/CON 012.JPG");
         background-repeat: no-repeat;
-        background-blend-mode: normal;
+        background-blend-mode: luminosity;
         background-size: cover;
-        background-position: center; 
+        background-position: center;
     }
 
-    .flex-form{
-        width: 50%;
-        margin: auto;
-    }
-    .mat-card {
-        width: 90%;
-        margin-bottom: 4px;
-        display: inline-flex;
-        background-color: rgba(255, 255, 255, 0.8);
+    .section {
+        width: 425px !important;
     }
 
     ::-webkit-scrollbar {
