--- a/src/app/avaliation/risco/rdc/rdc.component.scss
+++ b/src/app/avaliation/risco/rdc/rdc.component.scss
@@ -1,37 +1,95 @@
-
-
-@media only screen and (min-width: 768px){
-    .container {
-        background-image: url("./../../../../assets/img/CON 012.JPG");
-        background-repeat: no-repeat;
-        background-blend-mode: normal;
-        background-size: cover;
-        background-position: center; 
+.container {
+    background-color: rgb(35, 151, 155);
+    background-image: url("./../../../../assets/img/CON 012.JPG");
+    background-repeat: no-repeat;
+    background-blend-mode: hard-light;
+    background-size: cover;
+    background-position: center; 
+    
+    app-header-name{
+        width: 100%;
     }
-    .flex-form{
-        width: 50%;
-        margin: auto;
-    }
-    ::-webkit-scrollbar {
-        width: 0px;
-        background: transparent; /* make scrollbar transparent */
-    }
-    .mat-card {
-        width: 90%;
-        margin-bottom: 4px;
-        display: inline-flex;
-        background-color: rgba(255, 255, 255, 0.88);
-    }
-
 }
+    .section{
+        width: 100% !important;
+        display: flex !important;
+        flex-direction: column !important;
+        justify-content: flex-start !important;
+        align-items: center !important;
+    
+        h1 {
+          margin-top: 30px;
+          width: 100%;
+          height: 40px;
+          background-color: rgba(119, 107, 107, 0.788);
+          color: white;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-size: 16px;
+          text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.6);
+        }
 
+        .mat-card{
+            width: 100%;
+            background-color: rgba(119, 107, 107, 0.788);
+            color: white;
+            display: flex;
+            justify-content: space-evenly;
+            margin-bottom: 4px;
+            padding: 10px 0;
+            border-radius: unset;
+        }
 
-.mat-card {
-    width: 90%;
-    margin-bottom: 4px;
-    display: inline-flex;
-}
+        .mat-list-base .mat-list-item {
+            color: white;
+        }
+    }
 
+::ng-deep {
+  
+    .mat-select-value {
+      color: whitesmoke !important;
+    }
+    .mat-select-value-text {
+      color: whitesmoke !important;
+    }
+    .mat-form-field-appearance-legacy .mat-form-field-underline {
+      background-color: white;
+    }
+/*     .mat-card {
+      background-color: transparent;
+      color: white;
+    } */
+ 
+    .mat-card-subtitle {
+      text-align: left;
+      color: white;
+    }
+  
+    .mat-form-field-appearance-legacy .mat-form-field-label {
+      color: white !important;
+    }
+    label{
+      color: whitesmoke;
+    }
+  
+    .mat-stroked-button:not([disabled]) {
+      border-color: white;
+      color: white;
+    }
+    .mat-stroked-button:not([disabled]):hover {
+      border-color: white;
+      background-color: rgba(245, 245, 245, 0.555);
+    }
+    .mat-tab-label{
+      color: white;
+    }
+    .mat-select-arrow {
+      color: unset;
+    }
+  }
+  
 .mat-card-resultado{
     display: flex;
     flex-direction: column;
@@ -46,8 +104,23 @@
 }
 
 .action {
-    width: 200px;
-    margin: auto;
+    width: 100%;
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
 }
+
+@media only screen and (min-width: 768px){
+    .section{
+        width: 425px !important;
+    }
+
+    ::-webkit-scrollbar {
+        width: 0px;
+        background: transparent; /* make scrollbar transparent */
+    }
+
+}
+
+
+
