--- a/src/app/avaliation/risco/rddc/rddc.component.html
+++ b/src/app/avaliation/risco/rddc/rddc.component.html
@@ -1,9 +1,7 @@
 <div class="container">
-    <div class="header">
-        <h1 i18n>Risco de Dor na Coluna</h1>
-    </div>
-
+    <app-header-name></app-header-name>
     <div class="section">
+        <h1 i18n>Risco de Dor na Coluna</h1>
         <form class="flex-form" #f="ngForm" (submit)="save(f.value)">
             <mat-card>
                 <mat-card-header>
@@ -140,11 +138,8 @@
             </mat-card>
 
             <div class="footer">
-                <button mat-mini-fab color="primary" (click)="goBack()">
-                    <mat-icon>undo</mat-icon>
-                </button>
-                <button mat-mini-fab color="primary">
-                    <mat-icon>redo</mat-icon>
+                <button mat-stroked-button>
+                    Salvar
                 </button>
             </div>
         </form>
