--- a/src/app/avaliation/risco/rddc/rddc.component.scss
+++ b/src/app/avaliation/risco/rddc/rddc.component.scss
@@ -1,48 +1,110 @@
-
-@media only screen and (min-width: 768px){
-
-    .container {
-        background-image: url("./../../../../assets/img/rddc.jpg");
-        background-repeat: no-repeat;
-        background-blend-mode: normal;
-        background-size: cover;
-        background-position: center; 
-    }
-
-
+.container {
+    background-color: rgb(35, 151, 155);
+    background-image: url("./../../../../assets/img/CON 012.JPG");
+    background-repeat: no-repeat;
+    background-blend-mode: hard-light;
+    background-size: cover;
+    background-position: center; 
     
-  /*   .section{
-        width: 540px;
-    }
- */
- .flex-form{
-    width: 50%;
-    margin: auto;
-}
-
-    ::-webkit-scrollbar {
-        width: 0px;
-        background: transparent; /* make scrollbar transparent */
+    app-header-name{
+        width: 100%;
     }
 }
+    .section{
+        width: 100% !important;
+        display: flex !important;
+        flex-direction: column !important;
+        justify-content: flex-start !important;
+        align-items: center !important;
+    
+        h1 {
+          margin-top: 30px;
+          width: 100%;
+          height: 40px;
+          background-color: rgba(119, 107, 107, 0.788);
+          color: white;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          font-size: 16px;
+          text-shadow: 4px 4px 2px rgba(0, 0, 0, 0.6);
+        }
 
+        .mat-card{
+            width: 100%;
+            background-color: rgba(119, 107, 107, 0.788);
+            color: white;
+            display: flex;
+            justify-content: space-between;
+            margin-bottom: 4px;
+            padding: 10px 0;
+            border-radius: unset;
+        }
 
-.mat-card{
-    width: 90%;
-    margin-bottom: 4px;
-    background-color: rgba(255, 255, 255, .8);
-}
+        .mat-list-base .mat-list-item {
+            color: white;
+        }
 
-.action{
-    width: 200px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-}
+        .mat-radio-group{
+            width: 200px;
+            display: inline-flex;
+            justify-content: space-evenly;
+        }
+    }
 
-.mat-radio-button{
-    padding-right: 20px;
-}
+::ng-deep {
+  
+    .mat-select-value {
+      color: whitesmoke !important;
+    }
+    .mat-select-value-text {
+      color: whitesmoke !important;
+    }
+    .mat-form-field-appearance-legacy .mat-form-field-underline {
+      background-color: white;
+    }
+/*     .mat-card {
+      background-color: transparent;
+      color: white;
+    } */
+ 
+    .mat-card-subtitle {
+      text-align: left;
+      color: white;
+    }
+  
+    .mat-form-field-appearance-legacy .mat-form-field-label {
+      color: white !important;
+    }
+    label{
+      color: whitesmoke;
+    }
+  
+    .mat-stroked-button:not([disabled]) {
+      border-color: white;
+      color: white;
+    }
+    .mat-stroked-button:not([disabled]):hover {
+      border-color: white;
+      background-color: rgba(245, 245, 245, 0.555);
+    }
+    .mat-tab-label{
+      color: white;
+    }
+    .mat-select-arrow {
+      color: unset;
+    }
+    .mat-radio-outer-circle {
+        border-color: white;
+      }
+      .mat-radio-button.mat-radio-disabled.mat-radio-checked .mat-radio-outer-circle, .mat-radio-button.mat-radio-disabled .mat-radio-outer-circle {
+        border-color: rgb(255, 254, 254);
+    }
+    .mat-radio-button.mat-radio-disabled .mat-radio-ripple .mat-ripple-element, .mat-radio-button.mat-radio-disabled .mat-radio-inner-circle {
+        background-color: rgba(0,0,0);
+    }
+  }
+  
 .mat-card-resultado{
     display: flex;
     flex-direction: column;
@@ -55,3 +117,25 @@
     }
 
 }
+
+.action {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+@media only screen and (min-width: 768px){
+    .section{
+        width: 425px !important;
+    }
+
+    ::-webkit-scrollbar {
+        width: 0px;
+        background: transparent; /* make scrollbar transparent */
+    }
+
+}
+
+
+
