--- a/src/app/register/new/new.component.scss
+++ b/src/app/register/new/new.component.scss
@@ -15,6 +15,7 @@
     align-items: center;
 
     h1{
+        margin-top: 20px;
         color: white;
         text-shadow: 4px 4px 2px rgba(0,0,0,0.6);
     }
@@ -33,6 +34,13 @@
     }
     .mat-form-field-appearance-legacy .mat-form-field-underline {
         background-color: white;
+    }
+    .mat-stroked-button:not([disabled]) {
+        border-color: white;
+    }
+    .mat-stroked-button:not([disabled]):hover {
+        border-color: white;
+        background-color: rgba(245, 245, 245, 0.555);
     }
 }
 .new-form {
